# Citadel

./: CMakeLists.txt  Cargo.toml  README.md
config/: api_keys.json  trading_config.json
metatrader/MQL4/Include/: citadel_interface.mqh
metatrader/MQL4/experts/: CitadelEA.mq4  CitadelIndicator.mq4
metatrader/MQL5/Experts/: CitadelEA.mq5  CitadelIndicator.mq5
metatrader/MQL5/Include/: citadel_interface.mqh
src/cpp/: main.cpp
src/cpp/data/: data_fetcher.cpp  data_fetcher.hpp
src/cpp/execution/: trade_executor.cpp  trade_executor.hpp
src/cpp/models/: strategy1.cpp  strategy1.hpp
src/cpp/utils/: config_loader.cpp  config_loader.hpp  database_logger.cpp  database_logger.hpp
src/rust/: database_logger.rs  lib.rs
src/rust/data/: data_fetcher.rs
src/ui/: citadel_ui.qrc  mainwindow.ui
