[package]
name = "citadel_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.9"

[lib]
name = "citadel_rust"
path = "src/rust/lib.rs"